fixed issue with bubble animation being cut off above the bottom of the page on mobile-friendly view of Contact page by adding min-height property to div#root at max-width of 600px

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ html, body {
 
   #root {
     height: fit-content;
+    min-height: 90vh;
     margin-bottom: 10vh;
   }
 }
